--- a/vATIS.Desktop/Ui/Components/AtisStationView.axaml
+++ b/vATIS.Desktop/Ui/Components/AtisStationView.axaml
@@ -77,7 +77,11 @@
 			<!--Bottom Toolbar-->
 			<Grid Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="2" Margin="0,10,0,0" ColumnDefinitions="120,*,120"
 			      RowDefinitions="30">
-				<Button Command="{Binding VoiceRecordAtisCommand, DataType=vm:AtisStationViewModel}" Theme="{StaticResource Dark}" Content="RECORD ATIS" Grid.Column="0" Margin="0,0,5,0"/>
+				<Button Command="{Binding VoiceRecordAtisCommand, DataType=vm:AtisStationViewModel}" Theme="{StaticResource Dark}" Content="RECORD ATIS" Grid.Column="0" Margin="0,0,5,0">
+                    <Interaction.Behaviors>
+                        <behaviors:RecordAtisButtonBehavior RecordedAtisState="{Binding RecordedAtisState, DataType=vm:AtisStationViewModel}" BlinkOnColor="#004696" BlinkOffColor="#323232"/>
+                    </Interaction.Behaviors>
+                </Button>
 				<controls:NonNavigableComboBox Name="AtisPreset" Classes="Dark" Grid.Column="1" Margin="0,-1,0,0" ItemsSource="{Binding AtisPresetList, DataType=vm:AtisStationViewModel}" DisplayMemberBinding="{Binding Name, DataType=models:AtisPreset}" SelectedItem="{Binding SelectedAtisPreset, DataType=vm:AtisStationViewModel, Mode=OneWay}">
 					<ComboBox.Styles>
 						<Style Selector="ComboBox.Dark /template/ Grid">
