--- a/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
+++ b/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
@@ -546,17 +546,6 @@
 				<TabControl Margin="-3">
 					<TabItem Header="Template">
 						<StackPanel Orientation="Vertical">
-							<StackPanel Orientation="Horizontal" Spacing="10">
-								<CheckBox IsChecked="{Binding CloudsIdentifyCeilingLayer, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}" ToolTip.Tip="Prefix the lowest BKN or OVC layer with &quot;ceiling&quot; in the voice ATIS.">Identify ceiling layers in voice ATIS</CheckBox>
-								<CheckBox Name="CloudToMetric" IsChecked="{Binding CloudsConvertToMetric, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Convert cloud layer altitude to metric</CheckBox>
-							</StackPanel>
-							<CheckBox IsChecked="{Binding CloudHeightAltitudeInHundreds, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}" IsEnabled="{Binding !#CloudToMetric.IsChecked}" ToolTip.Tip="Cloud height will displayed in hundreds of feet, for example FEW010 will be shown as FEW1000">Display cloud height in hundreds of feet</CheckBox>
-							<Grid ColumnDefinitions="140,5,*,20,140,5,*" Margin="0,10,0,5">
-								<TextBlock Grid.Column="0" VerticalAlignment="Center" ToolTip.Tip="The spoken text if the cloud layer height is ///">Undetermined (Voice):</TextBlock>
-								<TextBox Text="{Binding UndeterminedLayerAltitudeVoice, DataType=vm:FormattingViewModel}" Grid.Column="2" Theme="{StaticResource DarkTextBox}"></TextBox>
-								<TextBlock Grid.Column="4" VerticalAlignment="Center" ToolTip.Tip="The text ATIS string if the cloud layer height is ///">Undetermined (Text):</TextBlock>
-								<TextBox Text="{Binding UndeterminedLayerAltitudeText, DataType=vm:FormattingViewModel}" Grid.Column="6" Theme="{StaticResource DarkTextBox}"></TextBox>
-							</Grid>
 							<groupBox:GroupBoxControl Header="Template" Theme="{StaticResource GroupBoxClassic}" Margin="0,5,0,0">
 								<StackPanel Orientation="Vertical" Spacing="10">
 									<StackPanel Orientation="Vertical">
@@ -580,6 +569,51 @@
 							</groupBox:GroupBoxControl>
 						</StackPanel>
 					</TabItem>
+                    <TabItem Header="Options">
+                        <StackPanel Orientation="Vertical" Spacing="10">
+                            <StackPanel Orientation="Horizontal" Spacing="10" VerticalAlignment="Center">
+                                <Label VerticalAlignment="Center" HorizontalAlignment="Right" Content="Ceiling cloud types:"/>
+                                <StackPanel Orientation="Horizontal" Spacing="10">
+                                    <CheckBox Content="SCT" Theme="{StaticResource CheckBox}">
+                                        <Interaction.Behaviors>
+                                            <behaviors:CheckboxToListBehavior ItemsSource="{Binding SelectedCeilingLayers, DataType=vm:FormattingViewModel}" Value="SCT"/>
+                                        </Interaction.Behaviors>
+                                    </CheckBox>
+                                    <CheckBox Content="BKN" Theme="{StaticResource CheckBox}">
+                                        <Interaction.Behaviors>
+                                            <behaviors:CheckboxToListBehavior ItemsSource="{Binding SelectedCeilingLayers, DataType=vm:FormattingViewModel}" Value="BKN"/>
+                                        </Interaction.Behaviors>
+                                    </CheckBox>
+                                    <CheckBox Content="OVC" Theme="{StaticResource CheckBox}">
+                                        <Interaction.Behaviors>
+                                            <behaviors:CheckboxToListBehavior ItemsSource="{Binding SelectedCeilingLayers, DataType=vm:FormattingViewModel}" Value="OVC"/>
+                                        </Interaction.Behaviors>
+                                    </CheckBox>
+                                </StackPanel>
+                            </StackPanel>
+                            <Grid ColumnDefinitions="300,*" ColumnSpacing="10">
+                                <CheckBox Grid.Column="0" IsChecked="{Binding CloudsIdentifyCeilingLayer, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Prefix ceiling layer in voice ATIS with "ceiling"</CheckBox>
+                                <Grid Grid.Column="1" ColumnDefinitions="Auto,*" ColumnSpacing="5">
+                                    <CheckBox Name="PrefixCeilingTextAtis" IsChecked="{Binding CloudsIdentifyCeilingLayerTextAtis, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Prefix the ceiling layer in the text ATIS with:</CheckBox>
+                                    <TextBox IsEnabled="{Binding #PrefixCeilingTextAtis.IsChecked}" Text="{Binding CloudCeilingLayerPrefixTextAtis, DataType=vm:FormattingViewModel}" Grid.Column="1" Theme="{StaticResource DarkTextBox}"/>
+                                </Grid>
+                            </Grid>
+                            <Grid ColumnDefinitions="300,*" ColumnSpacing="10">
+                                <CheckBox Grid.Column="0" Name="CloudToMetric" IsChecked="{Binding CloudsConvertToMetric, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Convert cloud layer altitude to metric</CheckBox>
+                                <CheckBox Grid.Column="1" IsChecked="{Binding CloudHeightAltitudeInHundreds, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}" IsEnabled="{Binding !#CloudToMetric.IsChecked}" ToolTip.Tip="Cloud height will displayed in hundreds of feet, for example FEW010 will be shown as FEW1000">Display cloud height in hundreds of feet in the text ATIS</CheckBox>
+                            </Grid>
+							<Grid ColumnDefinitions="*,*" ColumnSpacing="10">
+                                <Grid Grid.Column="0" ColumnDefinitions="Auto,*" ColumnSpacing="5">
+                                    <TextBlock Grid.Column="0" VerticalAlignment="Center" ToolTip.Tip="The spoken text if the cloud layer height is ///">Undetermined (Voice):</TextBlock>
+                                    <TextBox Grid.Column="1" Text="{Binding UndeterminedLayerAltitudeVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                                </Grid>
+                                <Grid Grid.Column="1" ColumnDefinitions="Auto,*" ColumnSpacing="5">
+                                    <TextBlock Grid.Column="0" VerticalAlignment="Center" ToolTip.Tip="The text ATIS string if the cloud layer height is ///">Undetermined (Text):</TextBlock>
+                                    <TextBox Grid.Column="1" Text="{Binding UndeterminedLayerAltitudeText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                                </Grid>
+							</Grid>
+                        </StackPanel>
+                    </TabItem>
 					<TabItem Header="Cloud Types">
 						<DataGrid GridLinesVisibility="All" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserSortColumns="False" BorderThickness="1" BorderBrush="#646464" ItemsSource="{Binding CloudTypes, DataType=vm:FormattingViewModel}">
 							<Interaction.Behaviors>
