--- a/vATIS.Desktop/Ui/Windows/CompactWindow.axaml
+++ b/vATIS.Desktop/Ui/Windows/CompactWindow.axaml
@@ -59,13 +59,35 @@
             BorderThickness="1"
             Background="#323232"
             ClipToBounds="True">
+        <Border.ContextMenu>
+            <ContextMenu ItemsSource="{Binding Stations, DataType=vm:CompactWindowViewModel}" IsVisible="{Binding HasAnyStations, DataType=vm:CompactWindowViewModel}">
+                <ContextMenu.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox IsChecked="{Binding IsVisibleOnMiniWindow, DataType=vm:AtisStationViewModel}" Content="{Binding TabText, DataType=vm:AtisStationViewModel}" Theme="{StaticResource CheckBox}"/>
+                    </DataTemplate>
+                </ContextMenu.ItemTemplate>
+                <ContextMenu.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Spacing="-5" />
+                    </ItemsPanelTemplate>
+                </ContextMenu.ItemsPanel>
+                <ContextMenu.Styles>
+                    <Style Selector="MenuItem">
+                        <Setter Property="Padding" Value="5,0"/>
+                    </Style>
+                    <Style Selector="MenuItem:pointerover /template/ Border#PART_LayoutRoot">
+                        <Setter Property="Background" Value="Transparent"/>
+                    </Style>
+                </ContextMenu.Styles>
+            </ContextMenu>
+        </Border.ContextMenu>
         <Panel ClipToBounds="True">
             <StackPanel Name="WindowControls" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Spacing="3" ZIndex="1" Margin="3" IsVisible="{Binding IsControlsVisible, DataType=vm:CompactWindowViewModel}">
                 <ToggleButton Theme="{StaticResource ActionToggle}" Command="{Binding ToggleMetarDetails, DataType=vm:CompactWindowTopMostViewModel, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" IsChecked="{Binding ShowMetarDetails, DataType=vm:CompactWindowTopMostViewModel, Mode=OneWay, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" />
                 <ToggleButton Theme="{StaticResource PinButtonSmall}" Command="{Binding ToggleIsTopMost, DataType=vm:CompactWindowTopMostViewModel, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" IsChecked="{Binding IsTopMost, DataType=vm:CompactWindowTopMostViewModel, Mode=OneWay, Source={x:Static vm:CompactWindowTopMostViewModel.Instance}}" />
                 <Button Theme="{StaticResource CompactViewButtonSmall}" Command="{Binding InvokeMainWindowCommand, DataType=vm:CompactWindowViewModel}" CommandParameter="{Binding ElementName=Window}" />
             </StackPanel>
-            <ItemsControl ItemsSource="{Binding Stations, DataType=vm:CompactWindowViewModel}" Margin="5" IsVisible="{Binding Stations.Count, DataType=vm:CompactWindowViewModel}" VerticalAlignment="Center">
+            <ItemsControl ItemsSource="{Binding FilteredStations, DataType=vm:CompactWindowViewModel}" Margin="5" IsVisible="{Binding FilteredStations.Count, DataType=vm:CompactWindowViewModel}" VerticalAlignment="Center">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Spacing="5">
@@ -89,10 +111,10 @@
             <TextBlock VerticalAlignment="Center"
                        HorizontalAlignment="Center"
                        Foreground="White"
-                       FontSize="24"
+                       FontSize="20"
                        Margin="10"
-                       IsVisible="{Binding !Stations.Count, DataType=vm:CompactWindowViewModel, FallbackValue=False}"
-                       Text="NOT CONNECTED"/>
+                       IsVisible="{Binding StatusLabelVisible, DataType=vm:CompactWindowViewModel, FallbackValue=False}"
+                       Text="{Binding StatusLabel, DataType=vm:CompactWindowViewModel}"/>
         </Panel>
     </Border>
 </Window>
