--- a/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
+++ b/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
@@ -591,25 +591,25 @@
                                     </CheckBox>
                                 </StackPanel>
                             </StackPanel>
-                            <Grid ColumnDefinitions="300,*" ColumnSpacing="10">
+                            <Grid ColumnDefinitions="300,10,*">
                                 <CheckBox Grid.Column="0" IsChecked="{Binding CloudsIdentifyCeilingLayer, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Prefix ceiling layer in voice ATIS with "ceiling"</CheckBox>
-                                <Grid Grid.Column="1" ColumnDefinitions="Auto,*" ColumnSpacing="5">
+                                <Grid Grid.Column="2" ColumnDefinitions="Auto,5,*">
                                     <CheckBox Name="PrefixCeilingTextAtis" IsChecked="{Binding CloudsIdentifyCeilingLayerTextAtis, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Prefix the ceiling layer in the text ATIS with:</CheckBox>
                                     <TextBox IsEnabled="{Binding #PrefixCeilingTextAtis.IsChecked}" Text="{Binding CloudCeilingLayerPrefixTextAtis, DataType=vm:FormattingViewModel}" Grid.Column="1" Theme="{StaticResource DarkTextBox}"/>
                                 </Grid>
                             </Grid>
-                            <Grid ColumnDefinitions="300,*" ColumnSpacing="10">
+                            <Grid ColumnDefinitions="300,10,*">
                                 <CheckBox Grid.Column="0" Name="CloudToMetric" IsChecked="{Binding CloudsConvertToMetric, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}">Convert cloud layer altitude to metric</CheckBox>
-                                <CheckBox Grid.Column="1" IsChecked="{Binding CloudHeightAltitudeInHundreds, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}" IsEnabled="{Binding !#CloudToMetric.IsChecked}" ToolTip.Tip="Cloud height will displayed in hundreds of feet, for example FEW010 will be shown as FEW1000">Display cloud height in hundreds of feet in the text ATIS</CheckBox>
+                                <CheckBox Grid.Column="2" IsChecked="{Binding CloudHeightAltitudeInHundreds, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}" IsEnabled="{Binding !#CloudToMetric.IsChecked}" ToolTip.Tip="Cloud height will displayed in hundreds of feet, for example FEW010 will be shown as FEW1000">Display cloud height in hundreds of feet in the text ATIS</CheckBox>
                             </Grid>
-							<Grid ColumnDefinitions="*,*" ColumnSpacing="10">
-                                <Grid Grid.Column="0" ColumnDefinitions="Auto,*" ColumnSpacing="5">
+							<Grid ColumnDefinitions="*,10,*">
+                                <Grid Grid.Column="0" ColumnDefinitions="Auto,5,*">
                                     <TextBlock Grid.Column="0" VerticalAlignment="Center" ToolTip.Tip="The spoken text if the cloud layer height is ///">Undetermined (Voice):</TextBlock>
-                                    <TextBox Grid.Column="1" Text="{Binding UndeterminedLayerAltitudeVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                                    <TextBox Grid.Column="2" Text="{Binding UndeterminedLayerAltitudeVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
                                 </Grid>
-                                <Grid Grid.Column="1" ColumnDefinitions="Auto,*" ColumnSpacing="5">
+                                <Grid Grid.Column="2" ColumnDefinitions="Auto,5,*">
                                     <TextBlock Grid.Column="0" VerticalAlignment="Center" ToolTip.Tip="The text ATIS string if the cloud layer height is ///">Undetermined (Text):</TextBlock>
-                                    <TextBox Grid.Column="1" Text="{Binding UndeterminedLayerAltitudeText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                                    <TextBox Grid.Column="2" Text="{Binding UndeterminedLayerAltitudeText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
                                 </Grid>
 							</Grid>
                         </StackPanel>
@@ -788,19 +788,19 @@
             <!--Wind Shear-->
 			<StackPanel Spacing="10" Margin="10,10,10,0" IsVisible="{Binding SelectedFormattingOption, DataType=vm:FormattingViewModel, Converter={StaticResource StringToBoolConverter}, ConverterParameter='Wind Shear'}">
                 <StackPanel Orientation="Vertical" Spacing="10">
-                    <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
-                        <TextBlock Grid.Column="1">Text</TextBlock>
-                        <TextBlock Grid.Column="2">Voice</TextBlock>
+                    <Grid ColumnDefinitions="100,10,*,10,*">
+                        <TextBlock Grid.Column="2">Text</TextBlock>
+                        <TextBlock Grid.Column="4">Voice</TextBlock>
                     </Grid>
-                    <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
+                    <Grid ColumnDefinitions="100,10,*,10,*">
                         <TextBlock Grid.Column="0" VerticalAlignment="Center">Runway Specific</TextBlock>
-                        <controls:TemplateVariableTextBox Grid.Column="1" Watermark="Text" Text="{Binding RunwayWindShearText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
-                        <controls:TemplateVariableTextBox Grid.Column="2" Watermark="Voice" Text="{Binding RunwayWindShearVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                        <controls:TemplateVariableTextBox Grid.Column="2" Watermark="Text" Text="{Binding RunwayWindShearText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                        <controls:TemplateVariableTextBox Grid.Column="4" Watermark="Voice" Text="{Binding RunwayWindShearVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
                     </Grid>
-                    <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
+                    <Grid ColumnDefinitions="100,10,*,10,*">
                         <TextBlock Grid.Column="0" VerticalAlignment="Center">All Runways</TextBlock>
-                        <controls:TemplateVariableTextBox Grid.Column="1" Watermark="Text" Text="{Binding AllRunwayWindShearText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
-                        <controls:TemplateVariableTextBox Grid.Column="2" Watermark="Voice" Text="{Binding AllRunwayWindShearVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                        <controls:TemplateVariableTextBox Grid.Column="2" Watermark="Text" Text="{Binding AllRunwayWindShearText, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
+                        <controls:TemplateVariableTextBox Grid.Column="4" Watermark="Voice" Text="{Binding AllRunwayWindShearVoice, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"/>
                     </Grid>
                     <WrapPanel>
                         <Button
@@ -817,29 +817,29 @@
             <StackPanel Spacing="10" IsVisible="{Binding SelectedFormattingOption, DataType=vm:FormattingViewModel, Converter={StaticResource StringToBoolConverter}, ConverterParameter='Trend Forecast'}">
                 <groupBox:GroupBoxControl Header="Change Indicator" Theme="{StaticResource GroupBoxClassic}">
                     <StackPanel Orientation="Vertical" Spacing="10">
-                        <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
-                            <TextBlock Grid.Column="1">Text</TextBlock>
-                            <TextBlock Grid.Column="2">Voice</TextBlock>
+                        <Grid ColumnDefinitions="100,10,*,10,*">
+                            <TextBlock Grid.Column="2">Text</TextBlock>
+                            <TextBlock Grid.Column="4">Voice</TextBlock>
                         </Grid>
-                        <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
+                        <Grid ColumnDefinitions="100,10,*,10,*">
                             <TextBlock Grid.Column="0" VerticalAlignment="Center">NOSIG</TextBlock>
-                            <TextBox Grid.Column="1" Text="{Binding NosigTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
-                            <TextBox Grid.Column="2" Text="{Binding NosigVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="2" Text="{Binding NosigTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="4" Text="{Binding NosigVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
                         </Grid>
-                        <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
+                        <Grid ColumnDefinitions="100,10,*,10,*">
                             <TextBlock Grid.Column="0" VerticalAlignment="Center">BECMG</TextBlock>
-                            <TextBox Grid.Column="1" Text="{Binding BecomingTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
-                            <TextBox Grid.Column="2" Text="{Binding BecomingVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="2" Text="{Binding BecomingTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="4" Text="{Binding BecomingVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
                         </Grid>
-                        <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
+                        <Grid ColumnDefinitions="100,10,*,10,*">
                             <TextBlock Grid.Column="0" VerticalAlignment="Center">TEMPO</TextBlock>
-                            <TextBox Grid.Column="1" Text="{Binding TemporaryTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
-                            <TextBox Grid.Column="2" Text="{Binding TemporaryVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="2" Text="{Binding TemporaryTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="4" Text="{Binding TemporaryVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
                         </Grid>
-                        <Grid ColumnDefinitions="100,*,*" ColumnSpacing="10">
+                        <Grid ColumnDefinitions="100,10,*,10,*">
                             <TextBlock Grid.Column="0" VerticalAlignment="Center" ToolTip.Tip="Text to print and/or say when the TREND is not available in the METAR">Not Available</TextBlock>
-                            <TextBox Grid.Column="1" Text="{Binding TrendNotAvailableTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
-                            <TextBox Grid.Column="2" Text="{Binding TrendNotAvailableVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="2" Text="{Binding TrendNotAvailableTextValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
+                            <TextBox Grid.Column="4" Text="{Binding TrendNotAvailableVoiceValue, DataType=vm:FormattingViewModel}" Theme="{StaticResource DarkTextBox}"></TextBox>
                         </Grid>
                     </StackPanel>
                 </groupBox:GroupBoxControl>
